--- a/style.css
+++ b/style.css
@@ -2,7 +2,20 @@ body {
   margin: 0;
   background: darkgray;
   overflow: hidden;
-  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+button {
+  border: none;
+  border-radius: 5px;
+  padding: 5px 5px 7px 5px;
+  margin: 2px;
+  cursor: pointer;
+}
+button:hover {
+  background: blue;
 }
 
 #networkCanvas {
